--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="test.txt" download>Download</a>
+            <a class="nav-link" href="LA.7z" download>Download</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#">User guide</a>
@@ -56,7 +56,7 @@
           <h3>Your Personal Coach</h2>
           <p>Welcome to League Advisor, we offer you a chance to get your own free personalized coach in League Of Legends!
           With our coach, you can focus your training efforts on what's important for your progression.</p>
-          <p><a class="btn btn-primary btn-lg" href="test.txt" download role="button">Check it out &raquo;</a></p>
+          <p><a class="btn btn-primary btn-lg" href="LA.7z" download role="button">Check it out &raquo;</a></p>
         </div>
       </div>
 
